--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-body {
-  margin-left: 20vw;
-  margin-right: 20vw;
-  margin-top: 10vh;
-}
-
 button {
   margin-bottom: 2em;
 }
@@ -13,5 +7,5 @@ button {
   margin: 0.5em;
   border: dashed black 1px;
   border-radius: 10px;
-  background-color: lightgrey;
+  background-color: var(--pico-secondary-background);
 }
