--- a/src/index.css
+++ b/src/index.css
@@ -34,18 +34,33 @@
 .side-stack {
   padding: 1em;
   position: absolute;
+  left: 0px;
   height: 100%;
   width: 100%;
   border-radius: 10px;
+  font-size: 1.2em; /* responsive font */
 }
 
 .center-stack {
   padding: 1em;
-  /* top: 0;
-  left: 0; */
   height: 100%;
   width: 100%;
   border-radius: 10px;
+  font-size: 2em; /* responsive font */
+}
+
+.side-stack,
+.center-stack {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  padding: 1em;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+
 }
 
 .side-stack-container > div:nth-child(1) {
